# mini-tf

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: MODEL_LOAD_README.md  SAVE_LOAD_README.md  mnist_train.cpp  model_load.cpp  xor_load.cpp  xor_train.cpp  xor_train.md
include/: mini_tf.hpp
include/autograd/: engine.hpp  node.hpp
include/core/: memory.hpp  ops_cpu.hpp  tensor.hpp
include/nn/: activations.hpp  layers.hpp  loss.hpp  model_metadata.hpp
include/optim/: adam.hpp  optimizer.hpp  sgd.hpp
src/autograd/: engine.cpp  node.cpp
src/core/: memory.cpp  ops_cpu.cpp  tensor.cpp
src/nn/: activations.cpp  layers.cpp  loss.cpp  model_metadata.cpp
src/optim/: adam.cpp  optimizer.cpp  sgd.cpp
